<resources>
    <string name="app_name">DiscoverMovie</string>
    <string name="discover_movies">Discover Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="movies">Movies</string>
    <string name="about_app">About App</string>
    <string name="no_movies">No Movies</string>
    <string name="app_details">I implemented the Application with MVVM architecture, Kotlin language, XML and ConstraintLayout Used for all layouts</string>
    <string name="sdk_version">targetSdk version = 34\nminSdk = 27\nUsed Dependecies:</string>
    <string name="dependencies_string">Retrofit 2\nNavigation\nPaging\nLivedata\nViewmodel\nGlide</string>
    <string name="application_guide">Application guide</string>
    <string name="application_info">Application Info</string>
    <string name="by_mohammad_reza">By M.Reza Jamshidbeigi...</string>
    <string name="app_guide">When you open the app, all current month items will show to you, then you can search each movies you want from search bar and return to all items again with clicking on close button that appeared next to the search bar\nEnjoy!</string>
</resources>